# backend/docs/swagger.yaml
@@ -996,7 +996,7 @@ definitions:
         type: string
       status:
         allOf:
-        - $ref: '#/definitions/github_com_chaitin_panda-wiki_domain.CommentStatus'
+        - $ref: '#/definitions/domain.CommentStatus'
         description: 'status : -1 reject 0 pending 1 accept'
     type: object
   domain.CommentReq:
@@ -1022,6 +1022,17 @@ definitions:
     - node_id
     - pic_urls
     type: object
+  domain.CommentStatus:
+    enum:
+    - -1
+    - 0
+    - 1
+    format: int32
+    type: integer
+    x-enum-varnames:
+    - CommentStatusReject
+    - CommentStatusPending
+    - CommentStatusAccepted
   domain.CompleteReq:
     properties:
       prefix:
@@ -1070,7 +1081,7 @@ definitions:
   domain.ConversationInfo:
     properties:
       user_info:
-        $ref: '#/definitions/github_com_chaitin_panda-wiki_domain.UserInfo'
+        $ref: '#/definitions/domain.UserInfo'
     type: object
   domain.ConversationListItem:
     properties:
@@ -1661,6 +1672,23 @@ definitions:
       summary:
         type: string
     type: object
+  domain.NodeGroupDetail:
+    properties:
+      auth_group_id:
+        type: integer
+      auth_ids:
+        items:
+          type: integer
+        type: array
+      kb_id:
+        type: string
+      name:
+        type: string
+      node_id:
+        type: string
+      perm:
+        $ref: '#/definitions/consts.NodePermName'
+    type: object
   domain.NodeListItemResp:
     properties:
       content_type:
@@ -2180,6 +2208,17 @@ definitions:
       settings:
         $ref: '#/definitions/domain.AppSettings'
     type: object
+  domain.UpdateAutoModelSettingReq:
+    properties:
+      APIKey:
+        description: APIKey 百智云 API 密钥
+        type: string
+      ChatModel:
+        description: ChatModel 对话模型，允许为空表示清空为默认
+        type: string
+    required:
+    - APIKey
+    type: object
   domain.UpdateKnowledgeBaseReq:
     properties:
       access_settings:
@@ -2249,6 +2288,24 @@ definitions:
     required:
     - id
     - kb_id
+    type: object
+  domain.UserInfo:
+    properties:
+      auth_user_id:
+        type: integer
+      avatar:
+        description: avatar
+        type: string
+      email:
+        type: string
+      from:
+        $ref: '#/definitions/domain.MessageFrom'
+      name:
+        type: string
+      real_name:
+        type: string
+      user_id:
+        type: string
     type: object
   domain.WebAppCommentSettings:
     properties:
@@ -2383,7 +2440,7 @@ definitions:
     properties:
       auths:
         items:
-          $ref: '#/definitions/github_com_chaitin_panda-wiki_api_auth_v1.AuthItem'
+          $ref: '#/definitions/v1.AuthItem'
         type: array
       client_id:
         type: string
@@ -2394,41 +2451,6 @@ definitions:
       source_type:
         $ref: '#/definitions/consts.SourceType'
     type: object
-  github_com_chaitin_panda-wiki_api_auth_v1.AuthItem:
-    properties:
-      avatar_url:
-        type: string
-      created_at:
-        type: string
-      id:
-        type: integer
-      ip:
-        type: string
-      last_login_time:
-        type: string
-      source_type:
-        $ref: '#/definitions/consts.SourceType'
-      username:
-        type: string
-    type: object
-  github_com_chaitin_panda-wiki_api_auth_v1.AuthSetReq:
-    properties:
-      client_id:
-        type: string
-      client_secret:
-        type: string
-      kb_id:
-        type: string
-      proxy:
-        type: string
-      source_type:
-        allOf:
-        - $ref: '#/definitions/consts.SourceType'
-        enum:
-        - github
-    required:
-    - source_type
-    type: object
   github_com_chaitin_panda-wiki_api_share_v1.AuthGetResp:
     properties:
       auth_type:
@@ -2437,23 +2459,6 @@ definitions:
         $ref: '#/definitions/consts.LicenseEdition'
       source_type:
         $ref: '#/definitions/consts.SourceType'
-    type: object
-  github_com_chaitin_panda-wiki_api_share_v1.AuthGitHubReq:
-    properties:
-      kb_id:
-        type: string
-      redirect_url:
-        type: string
-    type: object
-  github_com_chaitin_panda-wiki_api_share_v1.AuthGitHubResp:
-    properties:
-      url:
-        type: string
-    type: object
-  github_com_chaitin_panda-wiki_api_share_v1.FileUploadResp:
-    properties:
-      key:
-        type: string
     type: object
   github_com_chaitin_panda-wiki_api_share_v1.GitHubCallbackResp:
     type: object
@@ -2496,17 +2501,6 @@ definitions:
       error:
         type: string
     type: object
-  github_com_chaitin_panda-wiki_domain.CommentStatus:
-    enum:
-    - -1
-    - 0
-    - 1
-    format: int32
-    type: integer
-    x-enum-varnames:
-    - CommentStatusReject
-    - CommentStatusPending
-    - CommentStatusAccepted
   github_com_chaitin_panda-wiki_domain.ModelListItem:
     properties:
       api_header:
@@ -2560,41 +2554,6 @@ definitions:
     type: string
     x-enum-varnames:
     - ModelProviderBrandBaiZhiCloud
-  github_com_chaitin_panda-wiki_domain.NodeGroupDetail:
-    properties:
-      auth_group_id:
-        type: integer
-      auth_ids:
-        items:
-          type: integer
-        type: array
-      kb_id:
-        type: string
-      name:
-        type: string
-      node_id:
-        type: string
-      perm:
-        $ref: '#/definitions/consts.NodePermName'
-    type: object
-  github_com_chaitin_panda-wiki_domain.UserInfo:
-    properties:
-      auth_user_id:
-        type: integer
-      avatar:
-        description: avatar
-        type: string
-      email:
-        type: string
-      from:
-        $ref: '#/definitions/domain.MessageFrom'
-      name:
-        type: string
-      real_name:
-        type: string
-      user_id:
-        type: string
-    type: object
   gocap.ChallengeData:
     properties:
       challenge:
@@ -2652,12 +2611,59 @@ definitions:
       total:
         type: integer
     type: object
+  v1.AuthGitHubReq:
+    properties:
+      kb_id:
+        type: string
+      redirect_url:
+        type: string
+    type: object
+  v1.AuthGitHubResp:
+    properties:
+      url:
+        type: string
+    type: object
+  v1.AuthItem:
+    properties:
+      avatar_url:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: integer
+      ip:
+        type: string
+      last_login_time:
+        type: string
+      source_type:
+        $ref: '#/definitions/consts.SourceType'
+      username:
+        type: string
+    type: object
   v1.AuthLoginSimpleReq:
     properties:
       password:
         type: string
     required:
     - password
+    type: object
+  v1.AuthSetReq:
+    properties:
+      client_id:
+        type: string
+      client_secret:
+        type: string
+      kb_id:
+        type: string
+      proxy:
+        type: string
+      source_type:
+        allOf:
+        - $ref: '#/definitions/consts.SourceType'
+        enum:
+        - github
+    required:
+    - source_type
     type: object
   v1.CommentLists:
     properties:
@@ -2799,6 +2805,11 @@ definitions:
       user_access_token:
         type: string
     type: object
+  v1.FileUploadResp:
+    properties:
+      key:
+        type: string
+    type: object
   v1.KBUserInviteReq:
     properties:
       kb_id:
@@ -2922,7 +2933,7 @@ definitions:
       answerable_groups:
         description: 可被问答
         items:
-          $ref: '#/definitions/github_com_chaitin_panda-wiki_domain.NodeGroupDetail'
+          $ref: '#/definitions/domain.NodeGroupDetail'
         type: array
       id:
         type: string
@@ -2931,12 +2942,12 @@ definitions:
       visible_groups:
         description: 导航内可见
         items:
-          $ref: '#/definitions/github_com_chaitin_panda-wiki_domain.NodeGroupDetail'
+          $ref: '#/definitions/domain.NodeGroupDetail'
         type: array
       visitable_groups:
         description: 可被访问
         items:
-          $ref: '#/definitions/github_com_chaitin_panda-wiki_domain.NodeGroupDetail'
+          $ref: '#/definitions/domain.NodeGroupDetail'
         type: array
     type: object
   v1.ResetPasswordReq:
@@ -3193,7 +3204,7 @@ paths:
         name: param
         required: true
         schema:
-          $ref: '#/definitions/github_com_chaitin_panda-wiki_api_auth_v1.AuthSetReq'
+          $ref: '#/definitions/v1.AuthSetReq'
       produces:
       - application/json
       responses:
@@ -3917,6 +3928,28 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/domain.Response'
+      tags:
+      - model
+  /api/v1/model/auto-mode:
+    post:
+      consumes:
+      - application/json
+      description: update BaiZhiCloud API key and optional chat model
+      parameters:
+      - description: update BaiZhiCloud model setting request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/domain.UpdateAutoModelSettingReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Response'
+      summary: update BaiZhiCloud model setting
       tags:
       - model
   /api/v1/model/check:
@@ -4876,7 +4909,7 @@ paths:
         name: param
         required: true
         schema:
-          $ref: '#/definitions/github_com_chaitin_panda-wiki_api_share_v1.AuthGitHubReq'
+          $ref: '#/definitions/v1.AuthGitHubReq'
       produces:
       - application/json
       responses:
@@ -4887,7 +4920,7 @@ paths:
             - $ref: '#/definitions/domain.PWResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/github_com_chaitin_panda-wiki_api_share_v1.AuthGitHubResp'
+                  $ref: '#/definitions/v1.AuthGitHubResp'
               type: object
       summary: GitHub登录
       tags:
@@ -5187,7 +5220,7 @@ paths:
             - $ref: '#/definitions/domain.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/github_com_chaitin_panda-wiki_api_share_v1.FileUploadResp'
+                  $ref: '#/definitions/v1.FileUploadResp'
               type: object
       summary: 文件上传
       tags:
